Added following changes: 1) Created service which starts at device boot completion to send emails. 2) Created activity to update sender or receivers email details. 3) Added Mail library to send emails.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SMSMailer Preferences</string>
+    <string name="app_name">SMSMailer</string>
     <string name="action_settings">Settings</string>
     <string name="edit_message">Please enter message</string>
     <string name="button_send">Send message</string>
